--- a/app/src/main/res/layout/makereservation2.xml
+++ b/app/src/main/res/layout/makereservation2.xml
@@ -54,7 +54,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Rooms"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.962"
@@ -146,7 +146,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="ContactNumber"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.937"
@@ -219,7 +219,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="CheckOut"
-        android:inputType="textPersonName"
+        android:inputType="datetime"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.962"
@@ -256,7 +256,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="CheckIn"
-        android:inputType="textPersonName"
+        android:inputType="datetime"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.949"
